--- a/wwwroot/admin.html
+++ b/wwwroot/admin.html
@@ -6,70 +6,73 @@
     <title>Admin Dashboard - SmartLoan</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body class="bg-light">
-    <div class="container py-5">
-        <div class="d-flex justify-content-between align-items-center mb-4">
-            <h2>Dashboard Admin</h2>
-            <button onclick="logout()" class="btn btn-outline-danger">Logout</button>
+    <div class="overlay">
+        <div class="container py-5">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <h2>Dashboard Admin</h2>
+                <button onclick="logout()" class="btn btn-outline-danger">Logout</button>
+            </div>
+
+            <div class="mb-4 d-flex justify-content-center align-items-center" style="height: 500px">
+                <canvas id="statusChart" style="height: 50px"></canvas>
+            </div>
+
+            <div class="d-flex justify-content-between align-items-center mb-2">
+                <h3>Richieste di Prestito</h3>
+                <select id="statusFilter" class="form-select w-auto" onchange="filterRequests()">
+                    <option value="">Tutti</option>
+                    <option value="Approvata">Approvate</option>
+                    <option value="Rifiutata">Rifiutate</option>
+                    <option value="Pendente">Pendenti</option>
+                </select>
+            </div>
+
+            <div class="table-responsive">
+                <table class="table table-bordered table-hover align-middle">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>ID</th>
+                            <th>Utente</th>
+                            <th>Importo</th>
+                            <th>Tipo Prestito</th>
+                            <th>Durata (mesi)</th>
+                            <th>Rata Mensile</th>
+                            <th>Stato</th>
+                            <th>Azioni</th>
+                        </tr>
+                    </thead>
+                    <tbody id="requestTable"></tbody>
+                </table>
+            </div>
+
+            <div id="adminMsg" class="text-danger mt-3 fw-bold"></div>
         </div>
 
-        <div class="mb-4 d-flex justify-content-center align-items-center" style="height: 500px">
-            <canvas id="statusChart" style="height: 50px"></canvas>
-        </div>
-
-        <div class="d-flex justify-content-between align-items-center mb-2">
-            <h4>Richieste di Prestito</h4>
-            <select id="statusFilter" class="form-select w-auto" onchange="filterRequests()">
-                <option value="">Tutti</option>
-                <option value="Approvata">Approvate</option>
-                <option value="Rifiutata">Rifiutate</option>
-                <option value="Pendente">Pendenti</option>
-            </select>
-        </div>
-
-        <div class="table-responsive">
-            <table class="table table-bordered table-hover align-middle">
-                <thead class="table-dark">
-                    <tr>
-                        <th>ID</th>
-                        <th>Utente</th>
-                        <th>Importo</th>
-                        <th>Tipo Prestito</th>
-                        <th>Durata (mesi)</th>
-                        <th>Rata Mensile</th>
-                        <th>Stato</th>
-                        <th>Azioni</th>
-                    </tr>
-                </thead>
-                <tbody id="requestTable"></tbody>
-            </table>
-        </div>
-
-        <div id="adminMsg" class="text-danger mt-3 fw-bold"></div>
-    </div>
-
-    <!-- MODAL MOTIVAZIONE -->
-    <div class="modal fade" id="motivationModal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Inserisci motivazione</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
-                </div>
-                <div class="modal-body">
-                    <textarea id="motivationText" class="form-control" rows="4" placeholder="Scrivi qui la motivazione..."></textarea>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-                    <button type="button" class="btn btn-primary" id="confirmMotivationBtn">Conferma</button>
+        <!-- MODAL MOTIVAZIONE -->
+        <div class="modal fade" id="motivationModal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Inserisci motivazione</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+                    </div>
+                    <div class="modal-body">
+                        <textarea id="motivationText" class="form-control" rows="4" placeholder="Scrivi qui la motivazione..."></textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+                        <button type="button" class="btn btn-primary" id="confirmMotivationBtn">Conferma</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/config.js"></script>
+        <script src="js/admin.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/admin.js"></script>
 </body>
 </html>
