--- a/wwwroot/loan.html
+++ b/wwwroot/loan.html
@@ -5,12 +5,9 @@
     <title>SmartLoan - Simulazione Prestito</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <style>
-        body {
-            background: linear-gradient(to right, #8fd3f4, #84fab0);
-            transition: background-color 0.3s ease;
-        }
+    <link rel="stylesheet" href="css/style.css" />
 
+    <style>
         .card {
             transition: all 0.3s ease;
         }
@@ -25,6 +22,11 @@
             transition: transform 0.2s ease-in-out;
         }
 
+        h2 {
+            color: white;
+            text-align: center;
+            margin-bottom: 20px;
+        }
         /* Dark Mode */
         .dark-mode {
             background-color: #121212 !important;
@@ -42,32 +44,59 @@
             }
     </style>
 </head>
-<body class="bg-light">
-    <div class="container py-5">
-        <h2>Simula la tua rata</h2>
-        <div class="card mx-auto p-4 shadow" style="max-width: 500px;">
-            <form id="loanForm">
-                <select id="tipoPrestito" class="form-select mb-2" required>
-                    <option value="">Seleziona il Tipo di Prestito</option>
-                    <option value="Personale">Prestito Personale</option>
-                    <option value="Veicolo">Prestito Veicolo</option>
-                    <option value="Abitazione">Mutuo Casa</option>
-                    <option value="Altro">Altro</option>
-                </select>
-                <input type="number" step="0.01" id="importo" class="form-control mb-2" placeholder="Importo (€)" required />
-                <input type="number" id="mesi" class="form-control mb-3" placeholder="Durata (mesi)" required />
-                <button type="submit" class="btn btn-warning w-100">Calcola Rata</button>
-            </form>
-            <div id="loanResult" class="mt-3 text-info fw-bold"></div>
-        </div>
-        <div class="mt-3 text-end">
-            <button onclick="window.location.href='user.html'" class="btn btn-warning">Torna indietro</button>
-            <button onclick="window.location.href='request.html'" class="btn btn-primary">Invia la richiesta</button>
-            <button onclick="window.location.href='login.html'" class="btn btn-outline-danger">Logout</button>
+<body>
+    <div class="overlay">
+        <div class="container py-5">
+            <h2>Simula la tua rata</h2>
+            <div class="card mx-auto p-4 shadow" style="max-width: 500px;">
+                <form id="loanForm">
+                    <select id="tipoPrestito" class="form-select mb-2" required>
+                        <option value="">Seleziona il Tipo di Prestito</option>
+                        <option value="Personale">Prestito Personale</option>
+                        <option value="Veicolo">Prestito Veicolo</option>
+                        <option value="Abitazione">Mutuo Casa</option>
+                        <option value="Altro">Altro</option>
+                    </select>
+                    <input type="number" step="0.01" id="importo" class="form-control mb-2" placeholder="Importo (€)" required />
+                    <input type="number" id="mesi" class="form-control mb-3" placeholder="Durata (mesi)" required />
+                    <button type="submit" class="btn btn-warning w-100">Calcola Rata</button>
+                </form>
+            </div>
+            <div class="mt-3 text-end">
+                <button onclick="window.location.href='user.html'" class="btn btn-warning">Torna indietro</button>
+                <button onclick="window.location.href='login.html'" class="btn btn-outline-danger">Logout</button>
+            </div>
         </div>
     </div>
+
+    <!-- 🔹 Modale Risultato Simulazione -->
+    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header bg-warning">
+                    <h5 class="modal-title" id="resultModalLabel">Risultato Simulazione</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+                </div>
+                <div class="modal-body">
+                    <p><strong>Tipo Prestito:</strong> <span id="modalTipo"></span></p>
+                    <p><strong>Importo:</strong> € <span id="modalImporto"></span></p>
+                    <p><strong>Durata:</strong> <span id="modalDurata"></span> mesi</p>
+                    <p class="fs-5 text-primary"><strong>Rata Mensile Prevista:</strong> € <span id="modalRata"></span></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Torna indietro</button>
+                    <button type="button" id="goRequest" class="btn btn-success">Invia la richiesta</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Script personalizzati -->
+    <script src="js/config.js"></script>
     <script src="js/jwt.js"></script>
     <script src="js/loan.js"></script>
-    <script src="js/config.js"></script>
 </body>
 </html>
