--- a/wwwroot/login.html
+++ b/wwwroot/login.html
@@ -5,11 +5,9 @@
     <title>SmartLoan - Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css" />
+
     <style>
-        body {
-            background: linear-gradient(to right, #8fd3f4, #84fab0);
-            transition: background-color 0.3s ease;
-        }
 
         .card {
             transition: all 0.3s ease;
@@ -43,28 +41,28 @@
     </style>
 </head>
 <body class="bg-light">
-    <div class="container py-5">
-        <h1 class="text-center mb-4">
-            <img src="images/logo.jpg" alt="SmartLoan Logo" width="100" class="me-2" />
-            SmartLoan
-        </h1>
-        <div class="card mx-auto p-4 shadow" style="max-width: 400px;">
-            <h4 class="mb-3 text-center">Benvenuto!</h4>
-            <form id="loginForm">
-                <input type="text" id="loginUsername" class="form-control mb-2" placeholder="Username" required />
-                <input type="password" id="loginPassword" class="form-control mb-3" placeholder="Password" required />
-                <button type="submit" class="btn btn-success w-100" id="loginBtn">
-                    <span class="spinner-border spinner-border-sm d-none" id="loginSpinner" role="status"></span>
-                    <span id="loginBtnText">Login</span>
-                </button>
-            </form>
-            <div id="loginMsg" class="mt-2 small text-danger text-center"></div>
-            <div class="mt-3 text-center">
-                <a href="register.html">Non hai un account? Registrati</a>
+    <div class="overlay">
+        <div class="container py-5">
+            <h1 class="text-center mb-4">
+                SmartLoan
+            </h1>
+            <div class="card mx-auto p-4 shadow" style="max-width: 400px;">
+                <h4 class="mb-3 text-center">Benvenuto!</h4>
+                <form id="loginForm">
+                    <input type="text" id="loginUsername" class="form-control mb-2" placeholder="Username" required />
+                    <input type="password" id="loginPassword" class="form-control mb-3" placeholder="Password" required />
+                    <button type="submit" class="btn btn-success w-100" id="loginBtn">
+                        <span class="spinner-border spinner-border-sm d-none" id="loginSpinner" role="status"></span>
+                        <span id="loginBtnText">Login</span>
+                    </button>
+                </form>
+                <div id="loginMsg" class="mt-2 small text-danger text-center"></div>
+                <div class="mt-3 text-center">
+                    <a href="register.html">Non hai un account? Registrati</a>
+                </div>
             </div>
         </div>
     </div>
-
     <script src="js/config.js"></script>
     <script src="js/jwt.js"></script>
     <script src="js/login.js"></script>
