--- a/wwwroot/register.html
+++ b/wwwroot/register.html
@@ -5,12 +5,8 @@
     <title>SmartLoan - Registrazione</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css" />
     <style>
-        body {
-            background: linear-gradient(to right, #8fd3f4, #84fab0);
-            transition: background-color 0.3s ease;
-        }
-
         .card {
             transition: all 0.3s ease;
         }
@@ -43,42 +39,44 @@
     </style>
 </head>
 <body class="bg-light">
-    <div class="container py-5">
-        <h1 class="text-center mb-4">SmartLoan</h1>
-        <div class="card mx-auto p-4 shadow" style="max-width: 500px;">
-            <h4 class="mb-3">Registrati</h4>
-            <form id="registerForm">
-                <div class="row">
-                    <div class="col-md-6 mb-2">
-                        <input type="text" id="name" class="form-control" placeholder="Nome" required />
+    <div class="overlay">
+        <div class="container py-5">
+            <h1 class="text-center mb-4">SmartLoan</h1>
+            <div class="card mx-auto p-4 shadow" style="max-width: 500px;">
+                <h4 class="mb-3">Registrati</h4>
+                <form id="registerForm">
+                    <div class="row">
+                        <div class="col-md-6 mb-2">
+                            <input type="text" id="name" class="form-control" placeholder="Nome" required />
+                        </div>
+                        <div class="col-md-6 mb-2">
+                            <input type="text" id="surname" class="form-control" placeholder="Cognome" required />
+                        </div>
                     </div>
-                    <div class="col-md-6 mb-2">
-                        <input type="text" id="surname" class="form-control" placeholder="Cognome" required />
+                    <input type="text" id="indirizzo" class="form-control mb-2" placeholder="Indirizzo" required />
+                    <div class="row">
+                        <div class="col-md-6 mb-2">
+                            <input type="text" id="citta" class="form-control" placeholder="Città" required />
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <input type="text" id="provincia" class="form-control" placeholder="Prov." maxlength="2" required />
+                        </div>
+                        <div class="col-md-3 mb-2">
+                            <input type="text" id="cap" class="form-control" placeholder="CAP" required />
+                        </div>
                     </div>
+                    <input type="tel" id="telefono" class="form-control mb-2" placeholder="Telefono" required />
+                    <label for="dataNascita" class="form-label">Data di nascita</label>
+                    <input type="date" id="dataNascita" class="form-control mb-2" required />
+                    <input type="text" id="registerUsername" class="form-control mb-2" placeholder="Username" required />
+                    <input type="email" id="registerEmail" class="form-control mb-2" placeholder="Email" required />
+                    <input type="password" id="registerPassword" class="form-control mb-3" placeholder="Password" required />
+                    <button type="submit" class="btn btn-primary w-100">Registrati</button>
+                </form>
+                <div id="registerMsg" class="mt-2 small text-success"></div>
+                <div class="mt-3 text-center">
+                    <a href="login.html">Hai già un account? Accedi</a>
                 </div>
-                <input type="text" id="indirizzo" class="form-control mb-2" placeholder="Indirizzo" required />
-                <div class="row">
-                    <div class="col-md-6 mb-2">
-                        <input type="text" id="citta" class="form-control" placeholder="Città" required />
-                    </div>
-                    <div class="col-md-3 mb-2">
-                        <input type="text" id="provincia" class="form-control" placeholder="Prov." maxlength="2" required />
-                    </div>
-                    <div class="col-md-3 mb-2">
-                        <input type="text" id="cap" class="form-control" placeholder="CAP" required />
-                    </div>
-                </div>
-                <input type="tel" id="telefono" class="form-control mb-2" placeholder="Telefono" required />
-                <label for="dataNascita" class="form-label">Data di nascita</label>
-                <input type="date" id="dataNascita" class="form-control mb-2" required />
-                <input type="text" id="registerUsername" class="form-control mb-2" placeholder="Username" required />
-                <input type="email" id="registerEmail" class="form-control mb-2" placeholder="Email" required />
-                <input type="password" id="registerPassword" class="form-control mb-3" placeholder="Password" required />
-                <button type="submit" class="btn btn-primary w-100">Registrati</button>
-            </form>
-            <div id="registerMsg" class="mt-2 small text-success"></div>
-            <div class="mt-3 text-center">
-                <a href="login.html">Hai già un account? Accedi</a>
             </div>
         </div>
     </div>
