--- a/wwwroot/request.html
+++ b/wwwroot/request.html
@@ -5,12 +5,8 @@
     <title>SmartLoan - Richiesta Prestito</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css" />
     <style>
-        body {
-            background: linear-gradient(to right, #8fd3f4, #84fab0);
-            transition: background-color 0.3s ease;
-        }
-
         .card {
             transition: all 0.3s ease;
         }
@@ -25,6 +21,12 @@
             transition: transform 0.2s ease-in-out;
         }
 
+        h2 {
+            color: white;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
         /* Dark Mode */
         .dark-mode {
             background-color: #121212 !important;
@@ -36,38 +38,68 @@
                 border: 1px solid #333;
             }
 
-            .dark-mode input, .dark-mode button {
+            .dark-mode input,
+            .dark-mode button {
                 background-color: #2a2a2a;
                 color: white;
             }
     </style>
 </head>
-<body class="bg-light">
-    <div class="container py-5">
-        <h2>Invia la tua richiesta</h2>
-        <div class="card mx-auto p-4 shadow" style="max-width: 500px;">
-            <form id="loanRequestForm">
-                <select id="tipoPrestito" class="form-select mb-2" required>
-                    <option value="">Seleziona il Tipo di Prestito</option>
-                    <option value="Personale">Prestito Personale</option>
-                    <option value="Veicolo">Prestito Veicolo</option>
-                    <option value="Abitazione">Mutuo Casa</option>
-                    <option value="Altro">Altro</option>
-                </select>
-                <input type="number" step="0.01" id="importo" class="form-control mb-2" placeholder="Importo (€)" required />
-                <input type="number" id="durata" class="form-control mb-3" placeholder="Durata (mesi)" required />
-                <button type="submit" class="btn btn-primary w-100">Invia Richiesta</button>
-            </form>
-            <div id="requestMsg" class="mt-3 text-success fw-bold"></div>
-        </div>
-        <div class="mt-3 text-end">
-            <button onclick="window.location.href='user.html'" class="btn btn-warning">Torna indietro</button>
-            <button onclick="window.location.href='loan.html'" class="btn btn-secondary">Nuova simulazione</button>
-            <button onclick="window.location.href='login.html'" class="btn btn-outline-danger">Logout</button>
+<body>
+    <div class="overlay">
+        <div class="container py-5">
+            <h2>Invia la tua richiesta</h2>
+            <div class="card mx-auto p-4 shadow" style="max-width: 500px;">
+                <form id="loanRequestForm">
+                    <select id="tipoPrestito" class="form-select mb-2" required>
+                        <option value="">Seleziona il Tipo di Prestito</option>
+                        <option value="Personale">Prestito Personale</option>
+                        <option value="Veicolo">Prestito Veicolo</option>
+                        <option value="Abitazione">Mutuo Casa</option>
+                        <option value="Altro">Altro</option>
+                    </select>
+                    <input type="number" step="0.01" id="importo" class="form-control mb-2" placeholder="Importo (€)" required />
+                    <input type="number" id="durata" class="form-control mb-3" placeholder="Durata (mesi)" required />
+                    <button type="submit" class="btn btn-primary w-100">Invia Richiesta</button>
+                </form>
+                <div id="requestMsg" class="mt-3 text-success fw-bold"></div>
+            </div>
+            <div class="mt-3 text-end">
+                <button onclick="window.location.href='user.html'" class="btn btn-warning">Torna indietro</button>
+                <button onclick="window.location.href='loan.html'" class="btn btn-secondary">Nuova simulazione</button>
+                <button onclick="window.location.href='login.html'" class="btn btn-outline-danger">Logout</button>
+            </div>
         </div>
     </div>
+
+    <!-- 🔹 Modale di conferma -->
+    <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header bg-primary text-white">
+                    <h5 class="modal-title" id="confirmModalLabel">Conferma Richiesta Prestito</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+                </div>
+                <div class="modal-body">
+                    <p><strong>Tipo Prestito:</strong> <span id="modalTipo"></span></p>
+                    <p><strong>Importo:</strong> € <span id="modalImporto"></span></p>
+                    <p><strong>Durata:</strong> <span id="modalDurata"></span> mesi</p>
+                    <p>Vuoi confermare l'invio della richiesta?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+                    <button type="button" id="confirmBtn" class="btn btn-success">Conferma</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap Bundle (per modali) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Script personalizzati -->
+    <script src="js/config.js"></script>
     <script src="js/jwt.js"></script>
     <script src="js/request.js"></script>
-    <script src="js/config.js"></script>
 </body>
 </html>
