--- a/wwwroot/user.html
+++ b/wwwroot/user.html
@@ -5,64 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Richieste di prestito</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body class="bg-light">
+    <div class="overlay">
+        <div class="container mt-5">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <h2>Richieste di prestito</h2>
+                <button class="btn btn-outline-danger" id="logoutBtn">Logout</button>
+            </div>
 
-    <div class="container mt-5">
-        <div class="d-flex justify-content-between align-items-center mb-4">
-            <h2>Richieste di prestito</h2>
-            <button class="btn btn-outline-danger" id="logoutBtn">Logout</button>
+            <div class="mb-3">
+                <button class="btn btn-primary me-2" id="simulateBtn">Simula Prestito</button>
+                <button class="btn btn-success" id="requestBtn">Richiedi Prestito</button>
+            </div>
+
+            <input type="text" id="searchInput" class="form-control mb-3" placeholder="Cerca per importo, durata o stato..." />
+
+            <div id="loadingSpinner" class="text-center my-4 d-none">
+                <div class="spinner-border text-primary" role="status"></div>
+            </div>
+
+            <div class="table-responsive">
+                <table class="table table-bordered table-hover">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>ID</th>
+                            <th>Importo</th>
+                            <th>Durata</th>
+                            <th>Tipo Prestito</th>
+                            <th>Stato</th>
+                            <th>Data Richiesta</th>
+                        </tr>
+                    </thead>
+                    <tbody id="loanTableBody">
+                        <!-- Popolamento dinamico -->
+                    </tbody>
+                </table>
+            </div>
+
+            <div id="errorMsg" class="mt-3"></div>
         </div>
 
-        <div class="mb-3">
-            <button class="btn btn-primary me-2" id="simulateBtn">Simula Prestito</button>
-            <button class="btn btn-success" id="requestBtn">Richiedi Prestito</button>
-        </div>
-
-        <input type="text" id="searchInput" class="form-control mb-3" placeholder="Cerca per importo, durata o stato..." />
-
-        <div id="loadingSpinner" class="text-center my-4 d-none">
-            <div class="spinner-border text-primary" role="status"></div>
-        </div>
-
-        <div class="table-responsive">
-            <table class="table table-bordered table-hover">
-                <thead class="table-dark">
-                    <tr>
-                        <th>ID</th>
-                        <th>Importo</th>
-                        <th>Durata</th>
-                        <th>Tipo Prestito</th>
-                        <th>Stato</th>
-                        <th>Data Richiesta</th>
-                    </tr>
-                </thead>
-                <tbody id="loanTableBody">
-                    <!-- Popolamento dinamico -->
-                </tbody>
-            </table>
-        </div>
-
-        <div id="errorMsg" class="mt-3"></div>
-    </div>
-
-    <!-- Modal Motivazione -->
-    <div class="modal fade" id="motivazioneModal" tabindex="-1" aria-labelledby="motivazioneModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="motivazioneModalLabel">Motivazione della richiesta</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
-                </div>
-                <div class="modal-body" id="motivazioneContent">
-                    <!-- Qui verrà inserita la motivazione -->
+        <!-- Modal Motivazione -->
+        <div class="modal fade" id="motivazioneModal" tabindex="-1" aria-labelledby="motivazioneModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="motivazioneModalLabel">Motivazione della richiesta</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Chiudi"></button>
+                    </div>
+                    <div class="modal-body" id="motivazioneContent">
+                        <!-- Qui verrà inserita la motivazione -->
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/jwt.js"></script>
-    <script src="js/user.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/config.js"></script>
+        <script src="js/jwt.js"></script>
+        <script src="js/user.js"></script>
+
 </body>
 </html>
